# pre-commit-hooks

./: .pre-commit-hooks.yaml  pyproject.toml  setup.cfg  setup.py
pre_commit_hooks/: copyright_checker.py  futures_check.py
tests/: test_pre_commit_hooks.py
