[tool.poetry]
name = "pre-commit-hooks"
version = "0.1.0"
description = ""
authors = ["Steven K <steven@pointcircle.com>"]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
copyright_checker='pre_commit_hooks:copyright_checker'


