[tool.poetry]
name = "pre-commit-hooks"
version = "0.1.4"
description = "Some out-of-the-box hooks for pre-commit."
authors = ["Steven K <steven@pivotal.energy>"]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
copyright-checker = "pre_commit_hooks.copyright_checker:main"
check-futures = "pre_commit_hooks.futures_check:main"
