[metadata]
name = pre_commit_hooks
version = 0.0.4
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.rst
long_description_content_type = text/rst
url = https://github.com/pivotal-energy-solutions/pre-commit-hooks
author = Steven K
author_email = steven@pivotal.energy
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
console_scripts =
    copyright-checker = pre_commit_hooks.copyright_checker:main

[options.packages.find]
exclude = tests*

[bdist_wheel]
universal = True
